--- a/sbc1802/Makefile
+++ b/sbc1802/Makefile
@@ -1,7 +1,22 @@
 #++
 # Makefile - Makefile for the SBC1802 simulator...
 #
-#DESCRIPTION:
+#   COPYRIGHT (C) 2015-2024 BY SPARE TIME GIZMOS.  ALL RIGHTS RESERVED.
+#
+# LICENSE:
+#    This file is part of the SBC1802 emulator project.  SBC1802 is free
+# software; you may redistribute it and/or modify it under the terms of
+# the GNU Affero General Public License as published by the Free Software
+# Foundation, either version 3 of the License, or (at your option) any
+# later version.
+#
+#    SBC1802 is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License
+# for more details.  You should have received a copy of the GNU Affero General
+# Public License along with SBC1802.  If not, see http://www.gnu.org/licenses/.
+#
+# DESCRIPTION:
 #   This is a fairly simple Makefile for building the Spare Time Gizmos SBC1802
 # simulator on Debian Linux and using GNU Make and gcc (or rather, g++).
 #
