--- a/sbc6120/Makefile
+++ b/sbc6120/Makefile
@@ -1,7 +1,22 @@
 #++
 # Makefile - Makefile for the SBC6120 simulator...
 #
-#DESCRIPTION:
+#   Copyright (C) 1999-2022 by Spare Time Gizmos.  All rights reserved.
+#
+# LICENSE:
+#    This file is part of the SBC6120 emulator project. SBC6120 is free
+# software; you may redistribute it and/or modify it under the terms of
+# the GNU Affero General Public License as published by the Free Software
+# Foundation, either version 3 of the License, or (at your option) any
+# later version.
+#
+#    SBC6120 is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License
+# for more details.  You should have received a copy of the GNU Affero General
+# Public License along with SBC6120.  If not, see http://www.gnu.org/licenses/.
+#
+# DESCRIPTION:
 #   This is a fairly simple Makefile for building the Spare Time Gizmos SBC6120
 # simulator on Debian Linux and using GNU Make and gcc (or rather, g++).
 #
