--- a/pev2/Makefile
+++ b/pev2/Makefile
@@ -1,7 +1,22 @@
 #++
 # Makefile - Makefile for the PEV2 simulator...
 #
-#DESCRIPTION:
+#   COPYRIGHT (C) 2015-2020 BY SPARE TIME GIZMOS.  ALL RIGHTS RESERVED.
+#
+# LICENSE:
+#    This file is part of the PicoElf emulator project. PicoElf is free
+# software; you may redistribute it and/or modify it under the terms of
+# the GNU Affero General Public License as published by the Free Software
+# Foundation, either version 3 of the License, or (at your option) any
+# later version.
+#
+#    PicoElf is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License
+# for more details.  You should have received a copy of the GNU Affero General
+# Public License along with PicoElf.  If not, see http://www.gnu.org/licenses/.
+#
+# DESCRIPTION:
 #   This is a fairly simple Makefile for building the Spare Time Gizmos PEV2
 # simulator on Debian Linux and using GNU Make, gcc and g++.
 #
