Add MS2000 emulator

--- a/sbc1802/Makefile
+++ b/sbc1802/Makefile
@@ -39,10 +39,10 @@ EMULIB  = ../emulib
 
 
 # Define the target (library) and source files required ...
-CPPSRCS   = SBC1802.cpp MemoryMap.cpp TLIO.cpp \
+CPPSRCS   = SBC1802.cpp MemoryMap.cpp \
 	    Baud.cpp POST.cpp UserInterface.cpp \
             $(EMULIB)/LogFile.cpp $(EMULIB)/CommandParser.cpp \
-	    $(EMULIB)/CommandLine.cpp \
+	    $(EMULIB)/CommandLine.cpp $(EMULIB)/TLIO.cpp \
 	    $(EMULIB)/StandardUI.cpp $(EMULIB)/EMULIB.cpp \
             $(EMULIB)/ImageFile.cpp  $(EMULIB)/LinuxConsole.cpp \
 	    $(EMULIB)/SmartConsole.cpp $(EMULIB)/ElfDisk.cpp \
